fix(ci): add missing test:integration script
Fixes GitHub issue #1

The CI workflow was calling 'npm run test:integration' but this script
was missing from package.json. Added the test:integration script to run
integration tests.

This should fix the failing GitHub Actions builds.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "network:ips": "node -e \"const os = require('os'); const ifs = os.networkInterfaces(); Object.keys(ifs).forEach(dev => { ifs[dev].forEach(details => { if (details.family === 'IPv4' && !details.internal) console.log(details.address); });});\"",
     "test": "vitest run",
     "test:unit": "vitest run tests/unit",
+    "test:integration": "vitest run tests/integration",
     "test:scenarios": "vitest run tests/scenarios",
     "test:scenario": "vitest run",
     "test:performance": "vitest run tests/performance",
